_scss/_theme.scss
@mixin dark {
  color-scheme: dark;

  --bg: #0b0c0c;
  --fg: #f3f2f1;
  --muted: #505a5f;
  --border: #2a2c2e;

  --link: #5694ca;
  --link-visited: #6f72af;
  --link-focus: #d53880;

  --code-fg: #f3f2f1;
  --code-inline-bg: #1d1f1f;
  --code-inline-border: #2a2c2e;
  --code-block-bg: #1d1f1f;
  --code-block-border: #2a2c2e;

  --heading-anchor: #505a5f;
  --heading-anchor-hover: #5694ca;

  --syntax-comment: #505a5f;
  --syntax-keyword: #d53880;
  --syntax-string: #85994b;
  --syntax-number: #6f72af;
  --syntax-name: #f3f2f1;
  --syntax-type: #28a197;
  --syntax-function: #5694ca;
  --syntax-builtin: #1d70b8;
  --syntax-diff-add-bg: #1d2d13;
  --syntax-diff-add-fg: #85994b;
  --syntax-diff-del-bg: #452f2f;
  --syntax-diff-del-fg: #e28f84;
  --syntax-line-highlight: #35311b;
  --syntax-error: #d4351c;
}

:root {
  color-scheme: light;

  --bg: #eeeded;
  --fg: #000000;
  --muted: #a19d9d;
  --border: #d6d3d3;
  --accent: #d4351c;

  --link: #1d70b8;
  --link-visited: #4c2c92;
  --link-focus: #d53880;

  --code-fg: #000000;
  --code-inline-bg: #ffffff;
  --code-inline-border: #d6d3d3;
  --code-block-bg: #ffffff;
  --code-block-border: #d6d3d3;

  --heading-anchor: #b1b4b6;
  --heading-anchor-hover: #1d70b8;

  --syntax-comment: #a19d9d;
  --syntax-keyword: #912b88;
  --syntax-string: #85994b;
  --syntax-number: #4c2c92;
  --syntax-name: #000000;
  --syntax-type: #28a197;
  --syntax-function: #1d70b8;
  --syntax-builtin: #003078;
  --syntax-diff-add-bg: #e4e9d7;
  --syntax-diff-add-fg: #1d2d13;
  --syntax-diff-del-bg: #f7e3e0;
  --syntax-diff-del-fg: #452f2f;
  --syntax-line-highlight: #fff4c2;
  --syntax-error: #d4351c;
}

@media (prefers-color-scheme: dark) {
  :root:not([data-theme='light']) {
    @include dark;
  }
}

[data-theme='dark'] {
  @include dark;
}

